# MVA-DLMI_HistopathologyChallenge

./: .gitignore  README.md  RUCHE_HIBOU.md  pyproject.toml  requirements.txt  train.slurm
models/: baseline_model.pth
notebooks/: 1. Visualization.ipynb  2. Baseline training.ipynb  3. Augmented training.ipynb  4. Model evaluation.ipynb  augmented_training.py  getting_started.ipynb
report/: DLMI_Challenge_Report_MARTINI_EL-KBADI.tex  bibliography.bib  midl.cls  report.tex
results/: baseline.csv  submission_dinov2_vitl14_5_layers_no_tta.csv  submission_dinov2_vitl14_5_layers_tta.csv  val_results_no_tta.json  val_results_tta.json
scripts/: aggregate_loco_results.py  augmented_training.py  evaluate_all.py  final_training.py  final_training.slurm  generate_submissions.py  loco_array.slurm  loco_cv.py  optuna_search.py  smoke_test.py  smoke_test.slurm  validate_all.py
src/dlmi/: __init__.py  dataset.py  model.py  test.py  train.py  transforms.py  utils.py
