[project]
name = "dlmi"
version = "0.1.0"
description = "[MVA/CentraleSupélec] Deep Learning for Medical Imaging Challenge on Histopathology Out-of-Distribution Classification."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"